<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSepakBola"
        android:background="@color/Button"
        android:textColor="@color/fontButton"
        android:id="@+id/btnSepakBola"
        android:onClick="btnSepakBola"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginTopSepakBola"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnBasket"
        android:background="@color/Button"
        android:textColor="@color/fontButton"
        android:id="@+id/btnBasket"
        android:onClick="btnBasket"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginTopBasket"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnVoli"
        android:background="@color/Button"
        android:textColor="@color/fontButton"
        android:id="@+id/btnVoli"
        android:onClick="btnVoli"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginTopVoli"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnFutsal"
        android:background="@color/Button"
        android:textColor="@color/fontButton"
        android:id="@+id/btnFutsal"
        android:onClick="btnFutsal"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginTopFutsal"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnAirSoftGun"
        android:background="@color/Button"
        android:textColor="@color/fontButton"
        android:id="@+id/btnAirSoftGun"
        android:onClick="btnAirSoftGun"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginTopAirSoftGun"/>
</LinearLayout>
