<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zero.mockupbakallomba.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeftLogIn"
        android:gravity="center"
        android:text="@string/logIn"
        android:textSize="@dimen/textSizeLogIn"
        android:id="@+id/txtLogIn"
        android:onClick="txtLogIn"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeftButton"
            android:background="@color/Button"
            android:text="@string/btnTeam"
            android:textColor="@color/fontButton"
            android:onClick="btnTeam"/>

        <Button
            android:id="@+id/btnGuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeftButton"
            android:layout_toRightOf="@+id/btnTeam"
            android:background="@color/Button"
            android:text="@string/btnGuest"
            android:textColor="@color/fontButton"
            android:onClick="btnGuest"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeftSignUp"
        android:text="@string/signUp"
        android:id="@+id/txtSignUp"
        android:onClick="txtSignUp"
        />

</LinearLayout>
